--- a/src/Stylesheets/SummonerLobby.css
+++ b/src/Stylesheets/SummonerLobby.css
@@ -21,12 +21,6 @@
     background-color: #1a19197c;
 }
 
-.loading-gif{
-    margin-top: 20%;
-    width: 10%;
-    aspect-ratio: 1/1;
-}
-
 .blue-team{
     background-color: #020e1e7c;
 }
